--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,59 +1,1 @@
-<% if user_signed_in? %>
-    <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
-    <%= current_user.email %>
-<% else %>
-    <%= link_to "Login", new_user_session_path %>
-<% end %>
-
-<% if flash[:notice] %>
-    <p class="notice"><%= flash[:notice] %></p>
-<% end %>
-
-<br/>
-<br/>
-
-<a id="request" href="#">Quero fazer a unha</a>
-
-<br/>
-<br/>
-
-<% @requests.each do |r| %>
-    <%= r.statusAsText %>&nbsp;<%= r.address %>&nbsp;<%= r.price %><br/>
-<% end %>
-
-<div id="request_dialog" title="Faça seu pedido">
-
-  <%= form_for @request, :url => {:controller => 'request', :action => 'create'}, :html => { :class => 'formRequest' } do |r| %>
-
-      <%= r.label :address %><br />
-      <%= r.text_field :address %>
-
-      <br/>
-      <br/>
-
-      <%= r.label 'Eu quero ser notificado por:' %><br />
-      <%= r.radio_button :isPhone, false %>Email
-      <%= r.radio_button :isPhone, true %>Celular
-
-  <% end %>
-
-      <br/>
-
-      <a id="done" href="#">Done</a>
-</div>
-
-<script>
-    $(function() {
-        $("#request_dialog").dialog({
-            autoOpen: false
-        });
-
-        $("#request").click(function() {
-            $("#request_dialog").dialog("open");
-        });
-
-        $("#done").click(function() {
-            $(".formRequest").submit();
-        });
-    });
-</script>
+<%= render "nails/header" %>
