--- a/app/views/nails/_beauty.erb
+++ b/app/views/nails/_beauty.erb
@@ -1,31 +1,64 @@
-<br/>
-<br/>
+<div class="divFlores">
 
-<% if !@request.nil? && @request.errors.any? %>
-    <% @request.errors.full_messages.each do |msg| %>
-        <%= msg %><br />
-    <% end %>
-<% end %>
+  <div class="error-messages">
+      <% if !@request.nil? && @request.errors.any? %>
+          <% @request.errors.full_messages.each do |msg| %>
+                <span class="label label-important"><%= msg %></span>
+          <% end %>
+      <% end %>
+  </div>
 
-<table border="1">
+  <h4 style="margin-left: 369px; margin-top: 50px; margin-bottom: 28px;"><%=t :pedidos %></h4>
+
+  <% if @requests.any? %>
+      <table class="table tableStatus">
+        <thead>
         <tr>
-          <td><%=t :status %></td>
-          <td><%=t :endereco %></td>
-          <td><%=t :valor %></td>
+          <th style="width: 400px;"><%=t :endereco %></th>
+          <th style="width: 90px;"><%=t :valor %></th>
+          <th style="width: 90px;"><%=t :pagamento %></th>
+          <th style="width: 247px;"><%=t :status %></th>
         </tr>
-    <% @requests.each do |r| %>
-        <tr>
-            <%= form_for :request, :url => {:controller => 'request', :action => 'approve', :id => r.id} do |form| %>
-                <td><%= r.statusAsText %></td>
-                <td><%= r.address %></td>
-                <% if r.status == 'A' || r.status == 'R'  %>
-                  <td><%= r.price %></td>
-                <% else %>
-                    <td><%= form.text_field :price %></td>
-                    <td><%= form.submit 'Aprovar' %></td>
-                    <td><%= link_to 'Recusar', {:controller => 'request', :action => 'reject', :id => r.id} %></td>
-                <% end %>
-            <% end %>
-        </tr>
-    <% end %>
-</table>
+        </thead>
+        <tbody>
+        <% @requests.each do |r| %>
+            <tr>
+              <%= form_for :request, :url => {:controller => 'request', :action => 'approve', :id => r.id} do |form| %>
+                  <td><%= r.address %>,&nbsp;<%= r.number %>&nbsp;/&nbsp;<%= r.complement %></td>
+                  <% if r.status == 'A' || r.status == 'R'  %>
+                      <td>
+                        <% if !r.price.blank? %>
+                            <%=t :money %>&nbsp;
+                        <% else %>
+                            <%=t :nothing %>
+                        <% end %>
+                        <%= r.price %>
+                      </td>
+                      <td><%= r.paymentAsText %></td>
+                      <td><%= r.statusAsText %></td>
+                  <% else %>
+                      <td><%= form.text_field :price, :style => 'width:38px' %></td>
+                      <td>
+                        <%= form.select :payment, options_for_select([['Em Dinheiro', 'D'], ['Cartão', 'C'] ]), {:include_blank => true},
+                                                           html_options = {:style => "width: 96px"} %>
+                      </td>
+                      <td>
+                        <%= button_tag type: :submit, class: "btn btn-success" do %>
+                            <i class="icon-thumbs-up"></i>
+                        <% end %>
+                        <%= link_to options = {:controller => 'request', :action => 'reject', :id => r.id}, html_options = {:class => "btn btn-danger"} do %>
+                            <i class="icon-thumbs-down"></i>
+                        <% end %>
+                      </td>
+                  <% end %>
+              <% end %>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <div style="margin-left: 108px;"><%= will_paginate @requests %></div>
+  <% end %>
+
+  <%= image_tag 'logo_147x58.png', :class => 'logo' %>
+
+</div>
