--- a/app/views/nails/_header.erb
+++ b/app/views/nails/_header.erb
@@ -2,5 +2,5 @@
     <%= link_to t(:sair), destroy_user_session_path, :method => :delete %>
     <%= current_user.email %>
 <% else %>
-    <%= link_to t(:logar), new_user_session_path %>
+    <%= link_to t(:entrar), new_user_session_path %>
 <% end %>
