--- a/app/views/request/new.html.erb
+++ b/app/views/request/new.html.erb
@@ -8,31 +8,32 @@
     <% end %>
   </div>
 
-  <%= form_for @request, :html => {:class => "form-horizontal"}, :url => {:action => 'create'} do |r| %>
+  <%= form_for @request, :html => {:class => "form-horizontal", :id => "formRequest"}, :url => {:action => 'create'} do |r| %>
+
+      <h4 style="margin-left: 77px; margin-top: 35px; margin-bottom: 44px;"><%=t :endereco_ser_atendida %></h4>
 
       <div style="width: 400px;">
 
-      <h4 style="margin-left: 90px; margin-top: 35px; margin-bottom: 44px;"><%=t :endereco_ser_atendida %></h4>
-
         <div class="control-group">
-          <label class="control-label" for="inputLocalidade"><%=t :localidade %>:</label>
+          <label class="control-label" for="local"><%=t :localidade %>*:</label>
           <div class="controls">
-            <%= r.select :local_id, Local.all.collect {|l| [ l.name, l.id ] }, :include_blank => true %>
+            <%= r.select :local_id, Local.all.collect {|l| [ l.name, l.id ] }, {:include_blank => true},
+                            html_options = {:id => 'local'} %>
           </div>
         </div>
 
         <div class="control-group">
-          <label class="control-label" for="inputEndereco"><%=t :endereco %>:</label>
+          <label class="control-label" for="address"><%=t :endereco %>*:</label>
           <div class="controls">
-            <%= r.text_field :address %>
+            <%= r.text_field :address, :id => 'address' %>
           </div>
         </div>
 
         <div class="control-group">
-          <label class="control-label" for="inputNumero"><%=t :numero %>:</label>
+          <label class="control-label" for="complement"><%=t :numero %>*:</label>
           <div class="controls">
-            <%= r.text_field :number, :style => 'width:38px' %>
-            <%=t :complemento %>:<%= r.text_field :complement, :style => 'width:93px' %>
+            <%= r.text_field :number, :style => 'width:38px', :id => 'number' %>
+            <%=t :complemento %>*:<%= r.text_field :complement, :style => 'width:88px', :id => 'complement' %>
           </div>
         </div>
 
@@ -60,3 +61,16 @@
   <% end %>
 
 </div>
+
+<script type="text/javascript">
+
+    var metrics = [
+        [ '#local', 'presence', '' ],
+        [ '#address', 'presence', '' ],
+        [ '#number', 'presence', '' ],
+        [ '#complement', 'presence', '' ],
+    ];
+
+    $("#formRequest").nod( metrics );
+
+</script>
